welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-6: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^Program:7: error: not found: value vuBiscuit
if (vuBiscuit()){avance()} 
    ^